Add launch screen and onboarding view

--- a/Conexxa/AppDomain/pt-BR.lproj/Localizable.strings
+++ b/Conexxa/AppDomain/pt-BR.lproj/Localizable.strings
@@ -6,4 +6,6 @@
   
 */
 
-"hello" = "Oi";
+"slogan" = "Vivencie a melhor experiência";
+"noRegistrationButtonText" = "Entrar sem cadastro";
+"musicianRegisterButtonText" = "Cadastrar como músico";
