Add tab bar structure and lunch logic

--- a/Conexxa/AppDomain/pt-BR.lproj/Localizable.strings
+++ b/Conexxa/AppDomain/pt-BR.lproj/Localizable.strings
@@ -9,3 +9,7 @@
 "slogan" = "Vivencie a melhor experiência";
 "noRegistrationButtonText" = "Entrar sem cadastro";
 "musicianRegisterButtonText" = "Cadastrar como músico";
+"home" = "Home";
+"schedule" = "Agendamentos";
+"favorites" = "Favoritos";
+"profile" = "Perfil";
